external-crates/move/crates/move-compiler/tests/move_2024/expansion/native_macro.exp
error[E02007]: invalid 'fun' declaration
  ┌─ tests/move_2024/expansion/native_macro.move:2:5
  │
2 │     native macro fun foo();
  │     ^^^^^^ ----- Function declared as 'macro' here
  │     │       
  │     Invalid function declaration. 'native' functions cannot be 'macro'

