external-crates/move/crates/move-compiler/tests/move_2024/expansion/native_macro.move
module a::m {
    // cannot have native macro
    native macro fun foo();
}
